<resources>
    <!-- MainActivity-->
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <color name="pink">#00b3b3</color>

    <string name="app_name">PhoneDialer</string>
    <string name="hint">Enter a number</string>
    <string name="delete">Delete</string>

    <string name="contact1">contact1</string>
    <string name="contact2">contact2</string>
    <string name="contact3">contact3</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="asterisk">*</string>
    <string name="zero">0</string>
    <string name="hashtag">#</string>
    <string name="dial">Dial</string>


    <!-- Add Contact Activity-->
    <string name="title">Add Contact</string>
    <string name="name_hint">Name</string>
    <string name="number_hint">Number</string>
    <string name="add_button">ADD</string>

</resources>